<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="about">About</string>

    <string name="action_settings">Settings</string>

    <string name="add_friend">Add to friends</string>

    <string name="all_selected">All Categories</string>

    <string name="app_name">Travelink</string>

    <string name="at">at</string>

    <string name="authenticate_text">Authenticating…</string>

    <string name="authentication_failed">Authentication failed, please try again.</string>

    <string name="background_image">Background image</string>

    <string name="birthday">Birthday</string>

    <string name="change_email">Change Email</string>
    <string name="change_email_failed">Failed to change email!</string>
    <string name="change_email_successful">Change your email successfully.</string>
    <string name="change_email_text">Changing Email...</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_failed">Failed to change password!</string>
    <string name="change_password_successful">Change your password successfully.</string>
    <string name="change_password_text">Changing Password...</string>

    <string name="chats">Chats</string>

    <string name="checkin">Check-in</string>

    <string name="contact">Contact</string>

    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>

    <string name="create_account">Create An Account</string>
    <string name="create_account_text">Creating Account...</string>
    <string name="create_successful">Created your account successfully.</string>

    <string name="description_follow_button">Follow</string>
    <string name="description_unfollow_button">Unfollow</string>

    <string name="edit_profile">Edit Profile</string>

    <string name="email">Email</string>

    <string name="enter_name">Enter your name</string>
    <string name="enter_valid_comment">Enter a comment, please</string>
    <string name="enter_valid_email">Enter a valid email address</string>
    <string name="enter_valid_name">Name must be at least 3 characters in length</string>
    <string name="enter_valid_password">Password must be minimum 6 characters maximum 10 characters</string>

    <string name="explore">Explore</string>

    <string name="female">Female</string>

    <string name="follow">Follow</string>

    <string name="followers">Followers</string>

    <string name="following">Following</string>

    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_message">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="fresh_config">Fresh Config</string>

    <string name="friends">Friends</string>

    <string name="fullname">Full Name</string>

    <string name="gender">Gender</string>
    <string-array name="gender_arrays">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="help_and_feedback">Help and Feedback</string>

    <string name="home">Home</string>

    <string name="invitation_cta">Call to action</string>
    <string name="invitation_message">Please joine me for a friendly chat</string>
    <string name="invitation_title">Friendly Chat Invite</string>

    <string name="invite_friends">Invite Friends</string>
    <string name="invite_menu_label">Invite</string>

    <string name="languages">Languages</string>

    <string name="location">Location</string>
    <string name="location_permission_denied">This app requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="location_services_off">Location services is off</string>

    <string name="login">Login</string>
    <string name="login_failed">Your email address or password does not match, please try again.</string>

    <string name="logo">Logo</string>

    <string name="male">Male</string>

    <string name="manage_account">Manage Account</string>

    <string name="map_not_ready">Map is not ready yet</string>

    <string name="message">Message</string>

    <string name="name">Full Name</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="new_post">New Post</string>

    <string name="password">Password</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="permission_required">Location permission is required.</string>

    <string name="phone_number">Phone Number</string>

    <string name="places">Places</string>

    <string name="post_detail">Post Detail</string>

    <string name="posts">Posts</string>

    <string name="profile">Profile</string>

    <string name="reset_password">Reset Password</string>

    <string name="save">Save</string>

    <string name="search_this_area">Search this area</string>

    <string name="select_picture">Select Picture</string>

    <string name="send_reset_email_failed">Failed to send reset email!</string>

    <string name="sending_reset_email_text">Sending Reset Email...</string>

    <string name="sent_email_to_reset_password">We have sent you instructions to reset your password!</string>

    <string name="share">Share</string>

    <string name="sign_in">Already have an account? Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up">Signup</string>
    <string name="sign_up_failed">Signup failed, please try again.</string>

    <string name="skip">Skip</string>

    <string name="timeline">Timeline</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_maps">Map</string>

    <string name="unknown">Unknown</string>

    <string name="upload">Upload</string>
</resources>
