<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_recents"
        android:enabled="true"
        android:icon="@mipmap/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_explore"
        android:enabled="true"
        android:icon="@mipmap/ic_explore"
        android:title="@string/explore"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_chat"
        android:enabled="true"
        android:icon="@mipmap/ic_chat"
        android:title="@string/chats"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@mipmap/ic_person"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>