<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:fitsSystemWindows="false"
    tools:context=".activity.UserTransactionActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/login" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="56dp"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/reset_password_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:padding="10dp"
                    android:text="@string/forgot_password"
                    android:textColor="@android:color/white"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/reset_password_message_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/forgot_password_message"
                    android:textColor="@android:color/white"
                    android:textSize="14dp" />

                <!-- Email Label -->

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Password Label -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Reset Passsword Button -->

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_reset_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/login_button"
                    android:padding="12dp"
                    android:text="@string/reset_password"
                    android:textColor="@android:color/white" />

                <!-- Change Password Button -->

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_change_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/login_button"
                    android:padding="12dp"
                    android:text="@string/change_password"
                    android:textColor="@android:color/white" />

                <!-- Change Email Button -->

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_change_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/login_button"
                    android:padding="12dp"
                    android:text="@string/change_email"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</FrameLayout>

