<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context="com.bitlink.travelink.activity.LoginActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/login" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="56dp"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical">
                <!-- Email Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <!-- Password Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_with_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="6dp"
                    android:padding="12dp"
                    android:textAllCaps="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="6dp"
                    android:weightSum="2">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_login"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/login_button"
                        android:padding="12dp"
                        android:text="@string/login"
                        android:textColor="@android:color/white"
                        tools:ignore="RtlHardcoded" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_signup"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/login_button"
                        android:padding="12dp"
                        android:text="@string/signup"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <TextView
                    android:id="@+id/link_forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:gravity="start"
                    android:padding="10dp"
                    android:text="@string/forgot_password"
                    android:textSize="16sp" />

                <!--<TextView-->
                    <!--android:id="@+id/link_skip"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="0dp"-->
                    <!--android:layout_gravity="bottom|end"-->
                    <!--android:layout_weight="1"-->
                    <!--android:gravity="bottom|end"-->
                    <!--android:text="@string/skip"-->
                    <!--android:textSize="16sp"-->
                    <!--android:padding="20dp" />-->
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</FrameLayout>

